2008-12-03  Michael Wiegand <michael.wiegand@intevation.de>

	Implementing CR #22 (New script_tag Command,
	http://www.openvas.org/openvas-cr-22.html).

	* openvasd/comm.c (send_plug_info): Added support for sending NVT tags
	to client.

2008-12-02  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/comm.c : Repaired sending NOXREF, NOCVE, NOBID, NOSIGNKEY if
	none found (instead of empty string).

2008-12-02  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/comm.c : Comments added.

2008-11-28  Joey Schulze <joey@infodrom.org>

	* packaging/debian/openvasd.conf: Disable signature check

2008-11-27  Joey Schulze <joey@infodrom.org>

	* packaging/debian/openvas-server.postinst: Corrected server
	restart (init file was renamed from openvasd to openvas-server
	some revisions earlier)

2008-11-21  Joey Schulze <joey@infodrom.org>

	Sync with Debian packaging as uploaded to ftp-master
	
	* packaging/debian/control: Adjust uploaders, add section for
	openvas-server and -dev

	* packaging/debian/changelog: Add changelog records for versions
	1.0.2-1, 1.0.2-2 and 1.0.2-3 

2008-11-19  Tim Brown <timb@nth-dimension.org.uk>

	* packaging/debian/changelog: Updated.

	* packaging/debian/control: Adjusted dependencies to use beta2 versions of the libraries.

2008-11-19  Joey Schulze <joey@infodrom.org>

	* packaging/debian/openvas-server.install: Removed reference to
	openvas-check-signature.1 that was removed

2008-11-19  Michael Wiegand <michael.wiegand@intevation.de>

	* packaging/debian/copyright: Added missing Intevation copyright.

2008-11-18  Michael Wiegand <michael.wiegand@intevation.de>

	Fixing version requirements for glib as pointed out by atomicturtle.

	* configure.in: Updated glib requirements to >= 2.6.0

	* configure: Regenerated.

	* aclocal.m4: Regenerated to update PKG_CHECK_MODULES.

2008-11-17  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/ntp_11.c: comment added.
